# sdl-project

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  main.cpp
.github/workflows/: test-workflow.yml
modules/connect_the_dots/: CMakeLists.txt
modules/connect_the_dots/include/: connect_the_dots.hpp
modules/connect_the_dots/src/: connect_the_dots.cpp
modules/mandelbrot/: CMakeLists.txt
modules/mandelbrot/include/: mandelbrot.hpp
modules/mandelbrot/src/: mandelbrot.cpp
modules/module_1/: CMakeLists.txt
modules/module_1/include/: module_1.hpp
modules/module_1/src/: module_1.cpp
modules/module_1/tests/: test_module_1.cpp
modules/module_2/: CMakeLists.txt
modules/module_2/include/: module_2.hpp
modules/module_2/src/: module_2.cpp
modules/opengl/: CMakeLists.txt
modules/opengl/include/: shader.hpp
modules/opengl/shaders/: triangel.vert  triangle.frag
modules/opengl/src/: main.cpp  opengl.cpp  shader.cpp
modules/random_walk/: CMakeLists.txt
modules/random_walk/src/: random_walk.cpp
src/: main.cpp
